build based on 1cfc4c8

--- a/dev/examples/jupyter_notebooks/unique_squeezing.ipynb
+++ b/dev/examples/jupyter_notebooks/unique_squeezing.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling QuantumCumulants [35bcea6d-e19f-57db-af74-8011de6c7255]\n"
+     ]
+    }
+   ],
    "source": [
     "using QuantumCumulants\n",
     "using OrdinaryDiffEq, ModelingToolkit\n",
@@ -59,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -153,9 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eqs_c = complete(eqs)\n",
     "length(eqs_c)"
@@ -170,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,16 +262,27 @@
     "for N_ in N_ls\n",
     "    p0_ = [ω_, Ω_, ωd_, g_, η_, κ_, γ_, N_]\n",
     "    prob = ODEProblem(sys,u0,(0.0, 4π/ωd_), ps.=>p0_)\n",
-    "    sol = solve(prob,Tsit5(),reltol=1e-10,abstol=1e-10)\n",
+    "    sol = solve(prob,Tsit5(); saveat=4π/200ωd_, reltol=1e-10,abstol=1e-10)\n",
     "    push!(sol_ls,sol)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/myplot.pdf\""
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# plot results\n",
     "c_ls=[:black, :red, :blue, :cyan]\n",
@@ -306,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,9 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/myplot3.pdf\""
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# plot results\n",
     "sol = sol_ls[4]\n",
@@ -377,13 +417,6 @@
     "plot!(p,t_a,-real.(sqy_a),label=\"P - Effective model\",ls=:dash)\n",
     "plot(p, size=(500,200))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -392,7 +425,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.8.3",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -400,7 +433,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.3"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
