build based on fe016d1

--- a/dev/examples/jupyter_notebooks/unique_squeezing.ipynb
+++ b/dev/examples/jupyter_notebooks/unique_squeezing.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example we show the unique squeezing observed in a driven Dicke model described by $N$ two-level systems coupled to a quantized harmonic oscillator. First we present the full dynamics with a second order cumulant expansion. The Hamiltonian describing the system is"
+    "In this example we show the unique squeezing observed in a driven Dicke model described by $N$ two-level systems coupled to a quantized harmonic oscillator [[K. Gietka. et. al., arXiv:2305.14290]](https://arxiv.org/abs/2305.14290).  First we present the full dynamics with a second order cumulant expansion. The Hamiltonian describing the system is"
    ]
   },
   {
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "\\begin{align}\n",
-    "H = \\omega a^\\dagger a + \\frac{\\Omega}{2} \\sum_j  \\sigma^j_z + \\frac{g}{2} \\sum_j  (a^\\dagger + a) \\sigma^j_x + \\eta ( a \\, e^{i \\omega_\\mathrm{d} t} + a^\\dagger e^{-i \\omega_\\mathrm{d} t}),\n",
+    "H = \\omega a^\\dagger a + \\frac{\\Omega}{2} \\sum_j  \\sigma^j_z + \\frac{g}{2} \\sum_j  (a^\\dagger + a) \\sigma^j_x + \\eta ( a \\, e^{i \\omega_{d}\\, t} + a^\\dagger e^{-i \\omega_{d} \\,t}),\n",
     "\\end{align}"
    ]
   },
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "for $N = 1$ it describes the driven quantum Rabi model. Additionally the system features two decay channels, losses of the harmonic oscillator with rate $\\kappa$ and relaxation of the two-level system with rate $\\gamma$."
+    "for $N = 1$ it describes the driven quantum Rabi model. Additionally the system features a decay channel, losses of the harmonic oscillator with rate $\\kappa$."
    ]
   },
   {
@@ -39,17 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling QuantumCumulants [35bcea6d-e19f-57db-af74-8011de6c7255]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using QuantumCumulants\n",
     "using OrdinaryDiffEq, ModelingToolkit\n",
@@ -66,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +68,7 @@
     "h = hf ⊗ ha\n",
     "\n",
     "# Paramter\n",
-    "@cnumbers ω Ω ωd η κ g γ N \n",
+    "@cnumbers ω Ω ωd η κ g γ N ξ\n",
     "@syms t::Real # time\n",
     "nothing # hide"
    ]
@@ -90,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,28 +95,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the symbolic parameters, operators and indices we define the Hamiltonian and Liouvillian of the system."
+    "With the symbolic parameters, operators and indices we define the Hamiltonian and Liouvillian of the system. Note, however, that in the strong coupling regime $g \\sim g_c\\equiv \\sqrt{\\omega \\Omega}$ the driving term and jump operators have to be redefined. For a strongly interacting system, the ground state is very different from the  ground state of a non-interacting system. Therefore, using jump operators of a non-interacting system would lead to extraction of energy from the ground state of a strongly interacting system. The correct operators are the ones that diagonlize the Hamiltonian with adiabatiacally eliminated spins."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Operators diagonalizing the Hamiltonian\n",
+    "b = a*cosh(ξ) + a'*sinh(ξ) # approximate new eigenmodes of the system \n",
+    "\n",
     "# Indices\n",
     "i = Index(h,:i,N,ha)\n",
     "j = Index(h,:j,N,ha)\n",
     "\n",
     "# Hamiltonian\n",
-    "Hf =  ω*a'*a + η*(a'*exp(-1im*ωd*t) + a*exp(1im*ωd*t) )\n",
+    "Hf =  ω*a'*a + η*(b'*exp(-1im*ωd*t) + b*exp(1im*ωd*t) )\n",
     "Ha =  Ω*Σ(σ(2,2,i)-σ(1,1,i),i)/2\n",
     "Hi =  g*Σ((σ(1,2,i)+σ(2,1,i))*(a + a'),i)/2\n",
     "H = Hf + Ha + Hi\n",
     "\n",
     "# Jump operators & and rates\n",
-    "J = [a, σ(1,2,i)]\n",
+    "J = [b, σ(1,2,i)]\n",
     "rates = [κ, γ]\n",
+    "\n",
+    "# symbolic and numeric parameter list\n",
+    "ps = [ω , Ω , ωd , g , η , κ , γ , N , ξ ]\n",
     "nothing # hide"
    ]
   },
@@ -137,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -152,28 +150,17 @@
    "metadata": {},
    "source": [
     "\\begin{align}\n",
-    "\\frac{d}{dt} \\langle a\\rangle  =& -0.5 i \\left( \\underset{i}{\\overset{N}{\\sum}} g  \\langle {\\sigma}_{i}^{{12}}\\rangle  + \\underset{i}{\\overset{N}{\\sum}} g  \\langle {\\sigma}_{i}^{{21}}\\rangle  \\right) -1 i \\eta e^{-1 i t {\\omega}d} -0.5 \\kappa \\langle a\\rangle  -1 i \\omega \\langle a\\rangle  \\\\\n",
-    "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& 0.5 i \\left( \\underset{i}{\\overset{N}{\\sum}} g  \\langle a  {\\sigma}_{i}^{{12}}\\rangle  + \\underset{i}{\\overset{N}{\\sum}} g  \\langle a  {\\sigma}_{i}^{{21}}\\rangle  \\right) -0.5 i \\left( \\underset{i}{\\overset{N}{\\sum}} g  \\langle a^\\dagger  {\\sigma}_{i}^{{12}}\\rangle  + \\underset{i}{\\overset{N}{\\sum}} g  \\langle a^\\dagger  {\\sigma}_{i}^{{21}}\\rangle  \\right) -1.0 \\kappa \\langle a^\\dagger  a\\rangle  -1 i \\eta \\langle a^\\dagger\\rangle  e^{-1 i t {\\omega}d} + 1 i \\eta \\langle a\\rangle  e^{1 i t {\\omega}d} \\\\\n",
+    "\\frac{d}{dt} \\langle a\\rangle  =& -0.5 i \\left( \\underset{i}{\\overset{N}{\\sum}} g  \\langle {\\sigma}_{i}^{{12}}\\rangle  + \\underset{i}{\\overset{N}{\\sum}} g  \\langle {\\sigma}_{i}^{{21}}\\rangle  \\right) -1 i \\omega \\langle a\\rangle  -1 i \\eta \\sinh\\left( \\xi \\right) e^{1 i t {\\omega}d} -1 i \\eta e^{-1 i t {\\omega}d} {cosh(\\xi)^{*}} -0.5 \\kappa \\cosh\\left( \\xi \\right) \\langle a\\rangle  {cosh(\\xi)^{*}} + 0.5 \\kappa \\sinh\\left( \\xi \\right) \\langle a\\rangle  {sinh(\\xi)^{*}} \\\\\n",
+    "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& 0.5 i \\left( \\underset{i}{\\overset{N}{\\sum}} g  \\langle a  {\\sigma}_{i}^{{12}}\\rangle  + \\underset{i}{\\overset{N}{\\sum}} g  \\langle a  {\\sigma}_{i}^{{21}}\\rangle  \\right) -0.5 i \\left( \\underset{i}{\\overset{N}{\\sum}} g  \\langle a^\\dagger  {\\sigma}_{i}^{{12}}\\rangle  + \\underset{i}{\\overset{N}{\\sum}} g  \\langle a^\\dagger  {\\sigma}_{i}^{{21}}\\rangle  \\right) + \\kappa \\sinh\\left( \\xi \\right) {sinh(\\xi)^{*}} + \\kappa \\sinh\\left( \\xi \\right) {sinh(\\xi)^{*}} \\langle a^\\dagger  a\\rangle  -1 i \\eta \\sinh\\left( \\xi \\right) \\langle a^\\dagger\\rangle  e^{1 i t {\\omega}d} + 1 i \\eta \\cosh\\left( \\xi \\right) \\langle a\\rangle  e^{1 i t {\\omega}d} -1 i \\eta \\langle a^\\dagger\\rangle  e^{-1 i t {\\omega}d} {cosh(\\xi)^{*}} + 1 i \\eta \\langle a\\rangle  e^{-1 i t {\\omega}d} {sinh(\\xi)^{*}} -1.0 \\kappa \\cosh\\left( \\xi \\right) {cosh(\\xi)^{*}} \\langle a^\\dagger  a\\rangle  \\\\\n",
     "\\frac{d}{dt} \\langle {\\sigma}_{j}^{{22}}\\rangle  =& -1.0 \\gamma \\langle {\\sigma}_{j}^{{22}}\\rangle  -0.5 i g \\left( \\langle a^\\dagger  {\\sigma}_{j}^{{21}}\\rangle  + \\langle a  {\\sigma}_{j}^{{21}}\\rangle  \\right) + 0.5 i g \\left( \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  + \\langle a  {\\sigma}_{j}^{{12}}\\rangle  \\right)\n",
     "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "eqs_c = complete(eqs)\n",
     "length(eqs_c)"
@@ -188,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,9 +189,9 @@
    "metadata": {},
    "source": [
     "\\begin{align}\n",
-    "\\frac{d}{dt} \\langle a\\rangle  =& -0.5 i \\left( N g \\langle {\\sigma}_{1}^{{12}}\\rangle  + N g \\langle {\\sigma}_{1}^{{21}}\\rangle  \\right) -1 i \\eta e^{-1 i t {\\omega}d} -0.5 \\kappa \\langle a\\rangle  -1 i \\omega \\langle a\\rangle  \\\\\n",
-    "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& -0.5 i \\left( N g \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  + N g \\langle a^\\dagger  {\\sigma}_{1}^{{21}}\\rangle  \\right) + 0.5 i \\left( N g \\langle a  {\\sigma}_{1}^{{12}}\\rangle  + N g \\langle a  {\\sigma}_{1}^{{21}}\\rangle  \\right) -1.0 \\kappa \\langle a^\\dagger  a\\rangle  -1 i \\eta \\langle a^\\dagger\\rangle  e^{-1 i t {\\omega}d} + 1 i \\eta \\langle a\\rangle  e^{1 i t {\\omega}d} \\\\\n",
-    "\\frac{d}{dt} \\langle {\\sigma}_{1}^{{22}}\\rangle  =& 0.5 i g \\left( \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  + \\langle a  {\\sigma}_{1}^{{12}}\\rangle  \\right) -0.5 i g \\left( \\langle a^\\dagger  {\\sigma}_{1}^{{21}}\\rangle  + \\langle a  {\\sigma}_{1}^{{21}}\\rangle  \\right) -1.0 \\gamma \\langle {\\sigma}_{1}^{{22}}\\rangle \n",
+    "\\frac{d}{dt} \\langle a\\rangle  =& -0.5 i \\left( N g \\langle {\\sigma}_{1}^{{21}}\\rangle  + N g \\langle {\\sigma}_{1}^{{12}}\\rangle  \\right) -1 i \\omega \\langle a\\rangle  -1 i \\eta \\sinh\\left( \\xi \\right) e^{1 i t {\\omega}d} -1 i \\eta e^{-1 i t {\\omega}d} {cosh(\\xi)^{*}} -0.5 \\kappa \\cosh\\left( \\xi \\right) \\langle a\\rangle  {cosh(\\xi)^{*}} + 0.5 \\kappa \\sinh\\left( \\xi \\right) \\langle a\\rangle  {sinh(\\xi)^{*}} \\\\\n",
+    "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& -0.5 i \\left( N g \\langle a^\\dagger  {\\sigma}_{1}^{{21}}\\rangle  + N g \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  \\right) + 0.5 i \\left( N g \\langle a  {\\sigma}_{1}^{{21}}\\rangle  + N g \\langle a  {\\sigma}_{1}^{{12}}\\rangle  \\right) + \\kappa \\sinh\\left( \\xi \\right) {sinh(\\xi)^{*}} + \\kappa \\sinh\\left( \\xi \\right) {sinh(\\xi)^{*}} \\langle a^\\dagger  a\\rangle  -1 i \\eta \\sinh\\left( \\xi \\right) \\langle a^\\dagger\\rangle  e^{1 i t {\\omega}d} + 1 i \\eta \\cosh\\left( \\xi \\right) \\langle a\\rangle  e^{1 i t {\\omega}d} -1 i \\eta \\langle a^\\dagger\\rangle  e^{-1 i t {\\omega}d} {cosh(\\xi)^{*}} + 1 i \\eta \\langle a\\rangle  e^{-1 i t {\\omega}d} {sinh(\\xi)^{*}} -1.0 \\kappa \\cosh\\left( \\xi \\right) {cosh(\\xi)^{*}} \\langle a^\\dagger  a\\rangle  \\\\\n",
+    "\\frac{d}{dt} \\langle {\\sigma}_{1}^{{22}}\\rangle  =& -0.5 i g \\left( \\langle a^\\dagger  {\\sigma}_{1}^{{21}}\\rangle  + \\langle a  {\\sigma}_{1}^{{21}}\\rangle  \\right) + 0.5 i g \\left( \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  + \\langle a  {\\sigma}_{1}^{{12}}\\rangle  \\right) -1.0 \\gamma \\langle {\\sigma}_{1}^{{22}}\\rangle \n",
     "\\end{align}"
    ]
   },
@@ -217,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,17 +217,13 @@
     "# Parameters\n",
     "ω_ = 1.0\n",
     "Ω_ = 2e3ω_\n",
-    "N_ = 1\n",
     "gc_ = sqrt(Ω_*ω_/N) # renormalization of coupling to keep the system intensive\n",
     "g_ = 0.9gc_\n",
     "η_ = 4ω_\n",
     "κ_ = ω_\n",
     "γ_ = ω_\n",
     "ωd_ = sqrt(1-g_^2/gc_^2)*ω_\n",
-    "\n",
-    "# symbolic and numeric parameter list\n",
-    "ps = [ω , Ω , ωd , g , η , κ , γ , N ]\n",
-    "p0 = [ω_, Ω_, ωd_, g_, η_, κ_, γ_, N_]\n",
+    "ξ_ = 1/4*log(1-N*g_^2/(ω_*Ω_))\n",
     "nothing # hide"
    ]
   },
@@ -248,41 +231,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We solve the dynamics for four different numbers of two-level systems $N = [1, 10, 20, 100]$."
+    "We solve the dynamics for four different numbers of two-level systems $N = [1, 2, 10, 100]$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "sol_ls = []\n",
     "N_ls = [1,2,10,100]\n",
     "for N_ in N_ls\n",
-    "    p0_ = [ω_, Ω_, ωd_, g_, η_, κ_, γ_, N_]\n",
-    "    prob = ODEProblem(sys,u0,(0.0, 4π/ωd_), ps.=>p0_)\n",
-    "    sol = solve(prob,Tsit5(); saveat=4π/200ωd_, reltol=1e-10,abstol=1e-10)\n",
+    "    p0 = [ω_, Ω_, ωd_, g_, η_, κ_, γ_, N_, ξ_]\n",
+    "    prob = ODEProblem(sys,u0,(0.0, 4π/ωd_), ps.=>p0)\n",
+    "    sol = solve(prob,Tsit5(); saveat=π/30ωd_ ,reltol=1e-10,abstol=1e-10)\n",
     "    push!(sol_ls,sol)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/myplot.pdf\""
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# plot results\n",
     "c_ls=[:black, :red, :blue, :cyan]\n",
@@ -300,7 +272,8 @@
     "    s22 = sol[σ(2,2,1)] \n",
     "    plot!(p2,t_,real.(2s22 .- 1),color=c_ls[i],label=nothing)\n",
     "end\n",
-    "plot(p1, p2, layout=(1,2), size=(700,250),bottom_margin=5*Plots.mm, left_margin=5*Plots.mm)"
+    "plot(p1, p2, layout=(1,2), size=(700,250),bottom_margin=5*Plots.mm, left_margin=5*Plots.mm)\n",
+    "savefig(\"squeezing_full.svg\") # hide"
    ]
   },
   {
@@ -322,7 +295,7 @@
    "metadata": {},
    "source": [
     "\\begin{align}\n",
-    "H_\\mathrm{a} = \\omega a^\\dagger a - \\frac{g^2}{4 \\Omega}(a + a^\\dagger)^2 + \\eta ( a \\, e^{i \\omega_\\mathrm{d} t} + a^\\dagger e^{-i \\omega_\\mathrm{d} t}).\n",
+    "H_\\mathrm{a} = \\omega a^\\dagger a - \\frac{g^2}{4 \\Omega}(a + a^\\dagger)^2 + \\eta ( a \\, e^{i \\omega_{d} \\, t} + a^\\dagger e^{-i \\omega_{d} \\, t}).\n",
     "\\end{align}"
    ]
   },
@@ -335,15 +308,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# effective Hamiltonian\n",
     "@cnumbers gΩ # g^2/4Ω\n",
-    "H_a = Hf - gΩ*(a + a')^2\n",
+    "H_a = Hf - N*gΩ*(a + a')^2 # N is added for the sake of intensitivity\n",
     "\n",
-    "eqs_a = meanfield([a, a'a, a*a],H_a,[a];rates=[κ],order=2)\n",
+    "eqs_a = meanfield([a, a'a, a*a],H_a,[b];rates=[κ],order=2)\n",
     "nothing # hide"
    ]
   },
@@ -352,15 +325,15 @@
    "metadata": {},
    "source": [
     "\\begin{align}\n",
-    "\\frac{d}{dt} \\langle a\\rangle  =& 2 i g\\Omega \\left( \\langle a^\\dagger\\rangle  + \\langle a\\rangle  \\right) -1 i \\eta e^{-1 i t {\\omega}d} -0.5 \\kappa \\langle a\\rangle  -1 i \\omega \\langle a\\rangle  \\\\\n",
-    "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& -1.0 \\kappa \\langle a^\\dagger  a\\rangle  + 2 i g\\Omega \\langle a^\\dagger  a^\\dagger\\rangle  -2 i g\\Omega \\langle a  a\\rangle  -1 i \\eta \\langle a^\\dagger\\rangle  e^{-1 i t {\\omega}d} + 1 i \\eta \\langle a\\rangle  e^{1 i t {\\omega}d} \\\\\n",
-    "\\frac{d}{dt} \\langle a  a\\rangle  =& 2 i g\\Omega + 4 i g\\Omega \\left( \\langle a^\\dagger  a\\rangle  + \\langle a  a\\rangle  \\right) -1.0 \\kappa \\langle a  a\\rangle  -2 i \\omega \\langle a  a\\rangle  -2 i \\eta \\langle a\\rangle  e^{-1 i t {\\omega}d}\n",
+    "\\frac{d}{dt} \\langle a\\rangle  =& -1 i \\omega \\langle a\\rangle  + 2 i N g\\Omega \\left( \\langle a^\\dagger\\rangle  + \\langle a\\rangle  \\right) -1 i \\eta \\sinh\\left( \\xi \\right) e^{1 i t {\\omega}d} -1 i \\eta e^{-1 i t {\\omega}d} {cosh(\\xi)^{*}} -0.5 \\kappa \\cosh\\left( \\xi \\right) \\langle a\\rangle  {cosh(\\xi)^{*}} + 0.5 \\kappa \\sinh\\left( \\xi \\right) \\langle a\\rangle  {sinh(\\xi)^{*}} \\\\\n",
+    "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& \\kappa \\sinh\\left( \\xi \\right) {sinh(\\xi)^{*}} + 2 i N g\\Omega \\langle a^\\dagger  a^\\dagger\\rangle  -2 i N g\\Omega \\langle a  a\\rangle  + \\kappa \\sinh\\left( \\xi \\right) {sinh(\\xi)^{*}} \\langle a^\\dagger  a\\rangle  -1 i \\eta \\sinh\\left( \\xi \\right) \\langle a^\\dagger\\rangle  e^{1 i t {\\omega}d} + 1 i \\eta \\cosh\\left( \\xi \\right) \\langle a\\rangle  e^{1 i t {\\omega}d} -1 i \\eta \\langle a^\\dagger\\rangle  e^{-1 i t {\\omega}d} {cosh(\\xi)^{*}} + 1 i \\eta \\langle a\\rangle  e^{-1 i t {\\omega}d} {sinh(\\xi)^{*}} -1.0 \\kappa \\cosh\\left( \\xi \\right) {cosh(\\xi)^{*}} \\langle a^\\dagger  a\\rangle  \\\\\n",
+    "\\frac{d}{dt} \\langle a  a\\rangle  =& 2 i N g\\Omega -2 i \\omega \\langle a  a\\rangle  + 4 i N g\\Omega \\left( \\langle a^\\dagger  a\\rangle  + \\langle a  a\\rangle  \\right) -1.0 \\kappa \\sinh\\left( \\xi \\right) {cosh(\\xi)^{*}} + \\kappa \\sinh\\left( \\xi \\right) {sinh(\\xi)^{*}} \\langle a  a\\rangle  -1.0 \\kappa \\cosh\\left( \\xi \\right) {cosh(\\xi)^{*}} \\langle a  a\\rangle  -2 i \\eta \\sinh\\left( \\xi \\right) \\langle a\\rangle  e^{1 i t {\\omega}d} -2 i \\eta \\langle a\\rangle  e^{-1 i t {\\omega}d} {cosh(\\xi)^{*}}\n",
     "\\end{align}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,33 +345,23 @@
     "\n",
     "# Additional parameter\n",
     "gΩ_ = g_^2/(4Ω_)\n",
+    "N_ = 69 # the final result does not depend on N\n",
     "\n",
     "# symbolic and numeric parameter list\n",
-    "ps_a = [ω , ωd , η , κ , N , gΩ ]\n",
-    "p0_a = [ω_, ωd_, η_, κ_, N_, gΩ_]\n",
+    "ps_a = [ω , ωd , η , κ , N , g , Ω , ξ , gΩ ]\n",
+    "p0_a = [ω_, ωd_, η_, κ_, N_, g_, Ω_, ξ_, gΩ_]\n",
     "\n",
     "# define and solve numeric ordinary differential equation problem\n",
     "prob_a = ODEProblem(sys_a,u0_a,(0.0, 4π/ωd_), ps_a.=>p0_a)\n",
-    "sol_a = solve(prob_a,Tsit5(),reltol=1e-8,abstol=1e-8)\n",
+    "sol_a = solve(prob_a,Tsit5(); saveat=π/30ωd_, reltol=1e-8,abstol=1e-8)\n",
     "nothing # hide"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/myplot3.pdf\""
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# plot results\n",
     "sol = sol_ls[4]\n",
@@ -415,7 +378,8 @@
     "plot!(p,t_,-real.(sqy),label=\"P - Full model\",ls=:dash)\n",
     "plot!(p,t_a,real.(sqx_a),label=\"X - Effective model\") \n",
     "plot!(p,t_a,-real.(sqy_a),label=\"P - Effective model\",ls=:dash)\n",
-    "plot(p, size=(500,200))"
+    "plot(p, size=(500,200))\n",
+    "savefig(\"squeezing_eff.svg\") # hide"
    ]
   }
  ],
@@ -425,15 +389,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.8.5",
+   "display_name": "Julia 1.9.1",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.5"
+   "version": "1.9.1"
   }
  },
  "nbformat": 4,
