build based on ab0d426

--- a/dev/examples/jupyter_notebooks/cavity_antiresonance.ipynb
+++ b/dev/examples/jupyter_notebooks/cavity_antiresonance.ipynb
@@ -231,7 +231,18 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/antiresonance.svg\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "T = n_ls ./ maximum(n_ls)\n",
     "plot(Δ_ls, T, xlabel=\"Δ/Γ\", ylabel=\"T\", legend=false)\n",
@@ -248,17 +259,16 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.2",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.2"
+   "version": "1.10.2"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "6f38cfe8922d941c92fc591066a74813a9285a455efec88dafae5eaa218834d9"
