--- a/dev/examples/jupyter_notebooks/cavity_antiresonance_indexed.ipynb
+++ b/dev/examples/jupyter_notebooks/cavity_antiresonance_indexed.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(ℋ(cavity) ⊗ ℋ(atom), :j, N, 2)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Hilbert space\n",
     "hc = FockSpace(:cavity)\n",
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +151,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{align}\n",
+       "\\frac{d}{dt} \\langle a\\rangle  =& -1 i \\left( \\eta + \\underset{i}{\\overset{N}{\\sum}} {g}_{i}  \\langle {\\sigma}_{i}^{{12}}\\rangle  \\right) -1 i \\langle a\\rangle  {\\Delta}c -0.5 \\langle a\\rangle  \\kappa \\\\\n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{k}^{{12}}\\rangle  =& -0.5 \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} + \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   \\langle {\\sigma}_{k}^{{22}}\\rangle   {\\Gamma}_{k,j} -1 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} + 2 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   \\langle {\\sigma}_{k}^{{22}}\\rangle   {\\Omega}_{k,j} -1 i {g}_{k} \\langle a\\rangle  -0.5 \\langle {\\sigma}_{k}^{{12}}\\rangle  {\\Gamma}_{k,k} -1 i \\langle {\\sigma}_{k}^{{12}}\\rangle  {\\Delta}a + 2 i {g}_{k} \\langle a\\rangle  \\langle {\\sigma}_{k}^{{22}}\\rangle  \\\\\n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{k}^{{22}}\\rangle  =& -0.5 \\left( \\underset{i{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{i}^{{21}}\\rangle   \\langle {\\sigma}_{k}^{{12}}\\rangle   {\\Gamma}_{i,k} + \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{21}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} \\right) + 1 i \\underset{i{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{i}^{{21}}\\rangle   \\langle {\\sigma}_{k}^{{12}}\\rangle   {\\Omega}_{i,k} -1 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{21}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} -1.0 \\langle {\\sigma}_{k}^{{22}}\\rangle  {\\Gamma}_{k,k} + 1 i {g}_{k} \\langle a^\\dagger\\rangle  \\langle {\\sigma}_{k}^{{12}}\\rangle  -1 i {g}_{k} \\langle {\\sigma}_{k}^{{21}}\\rangle  \\langle a\\rangle \n",
+       "\\end{align}\n"
+      ],
+      "text/plain": [
+       "∂ₜ(⟨a⟩) = (0 - 1im)*(η + var\"∑(i=1:N)gi*⟨σ12i⟩\") + (0 - 1im)*⟨a⟩*Δc - 0.5⟨a⟩*κ\n",
+       "∂ₜ(⟨σ12k⟩) = -0.5var\"∑(j=1:N)(j≠i,k)⟨σ12j⟩*Γkj\" + var\"∑(j=1:N)(j≠i,k)⟨σ12j⟩*⟨σ22k⟩*Γkj\" + (0 - 1im)*var\"∑(j=1:N)(j≠k)⟨σ12j⟩*Ωkj\" + (0 + 2im)*var\"∑(j=1:N)(j≠k)⟨σ12j⟩*⟨σ22k⟩*Ωkj\" + (0 - 1im)*gk*⟨a⟩ - 0.5⟨σ12k⟩*Γkk + (0 - 1im)*⟨σ12k⟩*Δa + (0 + 2im)*gk*⟨a⟩*⟨σ22k⟩\n",
+       "∂ₜ(⟨σ22k⟩) = -0.5(var\"∑(i=1:N)(i≠k)⟨σ21i⟩*⟨σ12k⟩*Γik\" + var\"∑(j=1:N)(j≠i,k)⟨σ21k⟩*⟨σ12j⟩*Γkj\") + (0 + 1im)*var\"∑(i=1:N)(i≠k)⟨σ21i⟩*⟨σ12k⟩*Ωik\" + (0 - 1im)*var\"∑(j=1:N)(j≠k)⟨σ21k⟩*⟨σ12j⟩*Ωkj\" - ⟨σ22k⟩*Γkk + (0 + 1im)*gk*⟨a′⟩*⟨σ12k⟩ + (0 - 1im)*gk*⟨σ21k⟩*⟨a⟩\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eqs = meanfield(a,H,J;rates=rates,order=1)\n",
     "complete!(eqs)"
@@ -157,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,18 +252,16 @@
     "# definitions for fast replacement of numerical parameter \n",
     "prob = ODEProblem(sys,u0,(0.0, 20Γ_), ps.=>p0)\n",
     "prob_ss = SteadyStateProblem(prob)\n",
-    "p_sys = parameters(sys)\n",
-    "p_idx = [findfirst(isequal(p), ps) for p∈p_sys]\n",
     "\n",
     "for i=1:length(Δ_ls)\n",
     "    Δc_ = Δ_ls[i]\n",
     "    Δa_ = Δc_ + Ωij(1,2) # cavity on resonace with the shifted collective emitter\n",
     "    p0_ = [Δc_; η_; Δa_; κ_; gi_; Γij_; Ωij_]\n",
     "    \n",
-    "    # create new SteadyStateProblem\n",
-    "    prob_ss_ = remake(prob_ss, p=p0_[p_idx])\n",
-    "    sol_ss = solve(prob_ss_, DynamicSS(Tsit5(); abstol=1e-8, reltol=1e-8),\n",
-    "        reltol=1e-14, abstol=1e-14, maxiters=5e7)\n",
+    "    # create new ODEProblem\n",
+    "    prob_ss_ = remake(prob_ss, p=(ps.=>p0_) )\n",
+    "    sol_ss = solve(prob_ss_, DynamicSS(Tsit5(); abstol=1e-6, reltol=1e-6),\n",
+    "        reltol=1e-12, abstol=1e-12, maxiters=1e7)\n",
     "    n_ls[i] = abs2(sol_ss[a])\n",
     "end"
    ]
@@ -246,21 +275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/cavity_antiresonance_indexed.svg\""
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "T = n_ls ./ maximum(n_ls)\n",
     "plot(Δ_ls, T, xlabel=\"Δ/Γ\", ylabel=\"T\", legend=false)\n",
     "savefig(\"cavity_antiresonance_indexed.svg\") # hide"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -269,15 +302,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.8.3",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.3"
+   "version": "1.10.2"
   }
  },
  "nbformat": 4,
