--- a/dev/examples/jupyter_notebooks/filter-cavity_indexed.ipynb
+++ b/dev/examples/jupyter_notebooks/filter-cavity_indexed.ipynb
@@ -36,12 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mWaiting for another process (pid: 20347) to finish precompiling QuantumCumulants [35bcea6d-e19f-57db-af74-8011de6c7255]. Pidfile: /home/christoph/.julia/compiled/v1.10/QuantumCumulants/td6ql_342nI.ji.pidfile\n"
+     ]
+    }
+   ],
    "source": [
     "using QuantumCumulants\n",
-    "using OrdinaryDiffEq, SteadyStateDiffEq, ModelingToolkit\n",
+    "using OrdinaryDiffEq, ModelingToolkit\n",
     "using Plots"
    ]
   },
@@ -54,9 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "σ (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Paramters\n",
     "@cnumbers κ g gf κf R Γ Δ ν N M\n",
@@ -86,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +128,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{align}\n",
+       "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& 1 i \\left( \\underset{i}{\\overset{M}{\\sum}} gf  \\langle a  {b}_{i}^\\dagger\\rangle  + \\underset{j}{\\overset{N}{\\sum}} g  \\langle a  {\\sigma}_{j}^{{21}}\\rangle  \\right) -1 i \\left( \\underset{i}{\\overset{M}{\\sum}} gf  \\langle a^\\dagger  {b}_{i}\\rangle  + \\underset{j}{\\overset{N}{\\sum}} g  \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  \\right) -1.0 \\langle a^\\dagger  a\\rangle  \\kappa\n",
+       "\\end{align}\n"
+      ],
+      "text/plain": [
+       "∂ₜ(⟨a′*a⟩) = (0 + 1im)*(var\"∑(i=1:M)gf*⟨a*bi'⟩\" + var\"∑(j=1:N)g*⟨a*σ21j⟩\") + (0 - 1im)*(var\"∑(i=1:M)gf*⟨a′*bi⟩\" + var\"∑(j=1:N)g*⟨a′*σ12j⟩\") - ⟨a′*a⟩*κ\n"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eqs = meanfield(a'a,H,J;rates=rates,order=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of eqs.: 552\n"
+     ]
+    }
+   ],
    "source": [
     "M_ = 20\n",
     "eqs_sc = scale(eqs_c;h=[ha]) #h=[3]\n",
@@ -154,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/filter_cavities_indexed.svg\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Plot results\n",
     "p1 = plot(t, n_b(1), alpha=0.5, ylabel=\"⟨bᵢ⁺bᵢ⟩\", legend=false)\n",
@@ -232,15 +286,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.8.3",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.3"
+   "version": "1.10.2"
   }
  },
  "nbformat": 4,
