--- a/dev/examples/jupyter_notebooks/ramsey spectroscopy.ipynb
+++ b/dev/examples/jupyter_notebooks/ramsey spectroscopy.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "@cnumbers Δ Ω Γ ν\n",
     "@syms t::Real\n",
-    "@register f(t)"
+    "@register_symbolic f(t)"
    ]
   },
   {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/timeevolution_ramsey.svg\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob = ODEProblem(sys,u0,(0.0, 2tp+tf), ps.=>p0)\n",
     "sol = solve(prob,Tsit5(),maxiters=1e7)\n",
@@ -169,9 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/scan_ramsey.svg\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Δ_ls = [-2000:4:2000;]Γ_\n",
     "s22_ls = zeros(length(Δ_ls))\n",
@@ -196,17 +218,16 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.2",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.2"
+   "version": "1.10.2"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "6f38cfe8922d941c92fc591066a74813a9285a455efec88dafae5eaa218834d9"
