--- a/dev/examples/jupyter_notebooks/superradiant_laser_indexed.ipynb
+++ b/dev/examples/jupyter_notebooks/superradiant_laser_indexed.ipynb
@@ -36,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling QuantumCumulants [35bcea6d-e19f-57db-af74-8011de6c7255]\n"
+     ]
+    }
+   ],
    "source": [
     "using QuantumCumulants\n",
     "using OrdinaryDiffEq, SteadyStateDiffEq, ModelingToolkit\n",
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(ℋ(cavity) ⊗ ℋ(atom), :j, N, 2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "@cnumbers N Δ κ Γ R ν\n",
     "g(i) = IndexedVariable(:g, i) \n",
@@ -99,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +140,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{align}\n",
+       "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& 1 i \\underset{i}{\\overset{N}{\\sum}} {g}_{i}  \\langle a  {\\sigma}_{i}^{{21}}\\rangle  -1 i \\underset{i}{\\overset{N}{\\sum}} {g}_{i}  \\langle a^\\dagger  {\\sigma}_{i}^{{12}}\\rangle  -1.0 \\langle a^\\dagger  a\\rangle  \\kappa \\\\\n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{j}^{{22}}\\rangle  =& R -1.0 R \\langle {\\sigma}_{j}^{{22}}\\rangle  + 1 i {g}_{j} \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  -1 i {g}_{j} \\langle a  {\\sigma}_{j}^{{21}}\\rangle  -1.0 \\langle {\\sigma}_{j}^{{22}}\\rangle  \\Gamma\n",
+       "\\end{align}\n"
+      ],
+      "text/plain": [
+       "∂ₜ(⟨a′*a⟩) = (0 + 1im)*var\"∑(i=1:N)gi*⟨a*σ21i⟩\" + (0 - 1im)*var\"∑(i=1:N)gi*⟨a′*σ12i⟩\" - ⟨a′*a⟩*κ\n",
+       "∂ₜ(⟨σ22j⟩) = R - R*⟨σ22j⟩ + (0 + 1im)*gj*⟨a′*σ12j⟩ + (0 - 1im)*gj*⟨a*σ21j⟩ - ⟨σ22j⟩*Γ\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Derive equations\n",
     "ops = [a'*a, σ(2,2,j)]\n",
@@ -139,9 +176,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{align}\n",
+       "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& 1 i \\underset{i}{\\overset{N}{\\sum}} {g}_{i}  \\langle a  {\\sigma}_{i}^{{21}}\\rangle  -1 i \\underset{i}{\\overset{N}{\\sum}} {g}_{i}  \\langle a^\\dagger  {\\sigma}_{i}^{{12}}\\rangle  -1.0 \\langle a^\\dagger  a\\rangle  \\kappa \\\\\n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{j}^{{22}}\\rangle  =& R -1.0 R \\langle {\\sigma}_{j}^{{22}}\\rangle  + 1 i {g}_{j} \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  -1 i {g}_{j} \\langle a  {\\sigma}_{j}^{{21}}\\rangle  -1.0 \\langle {\\sigma}_{j}^{{22}}\\rangle  \\Gamma \\\\\n",
+       "\\frac{d}{dt} \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  =& 1 i \\underset{i{\\ne}j}{\\overset{N}{\\sum}} {g}_{i}  \\langle {\\sigma}_{i}^{{21}}  {\\sigma}_{j}^{{12}}\\rangle  -0.5 R \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  + 1 i {g}_{j} \\langle {\\sigma}_{j}^{{22}}\\rangle  -1 i {g}_{j} \\langle a^\\dagger  a\\rangle  -0.5 \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  \\left( \\Gamma + \\kappa + \\nu \\right) -1 i \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  \\Delta + 2 i {g}_{j} \\langle {\\sigma}_{j}^{{22}}\\rangle  \\langle a^\\dagger  a\\rangle  \\\\\n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{j}^{{12}}  {\\sigma}_{k}^{{21}}\\rangle  =& -1.0 R \\langle {\\sigma}_{j}^{{12}}  {\\sigma}_{k}^{{21}}\\rangle  -1 i {g}_{j} \\langle a  {\\sigma}_{k}^{{21}}\\rangle  + 1 i {g}_{k} \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  + \\langle {\\sigma}_{j}^{{12}}  {\\sigma}_{k}^{{21}}\\rangle  \\left( -1.0 \\Gamma -1.0 \\nu \\right) + 2 i {g}_{j} \\langle a  {\\sigma}_{k}^{{21}}\\rangle  \\langle {\\sigma}_{j}^{{22}}\\rangle  -2 i {g}_{k} \\langle a^\\dagger  {\\sigma}_{j}^{{12}}\\rangle  \\langle {\\sigma}_{k}^{{22}}\\rangle \n",
+       "\\end{align}\n"
+      ],
+      "text/plain": [
+       "∂ₜ(⟨a′*a⟩) = (0 + 1im)*var\"∑(i=1:N)gi*⟨a*σ21i⟩\" + (0 - 1im)*var\"∑(i=1:N)gi*⟨a′*σ12i⟩\" - ⟨a′*a⟩*κ\n",
+       "∂ₜ(⟨σ22j⟩) = R - R*⟨σ22j⟩ + (0 + 1im)*gj*⟨a′*σ12j⟩ + (0 - 1im)*gj*⟨a*σ21j⟩ - ⟨σ22j⟩*Γ\n",
+       "∂ₜ(⟨a′*σ12j⟩) = (0 + 1im)*var\"∑(i=1:N)(i≠j)gi*⟨σ21i*σ12j⟩\" - 0.5R*⟨a′*σ12j⟩ + (0 + 1im)*gj*⟨σ22j⟩ + (0 - 1im)*gj*⟨a′*a⟩ - 0.5⟨a′*σ12j⟩*(Γ + κ + ν) + (0 - 1im)*⟨a′*σ12j⟩*Δ + (0 + 2im)*gj*⟨σ22j⟩*⟨a′*a⟩\n",
+       "∂ₜ(⟨σ12j*σ21k⟩) = -R*⟨σ12j*σ21k⟩ + (0 - 1im)*gj*⟨a*σ21k⟩ + (0 + 1im)*gk*⟨a′*σ12j⟩ + ⟨σ12j*σ21k⟩*(-Γ - ν) + (0 + 2im)*gj*⟨a*σ21k⟩*⟨σ22j⟩ + (0 - 2im)*gk*⟨a′*σ12j⟩*⟨σ22k⟩\n"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# custom filter function\n",
     "φ(x::Average) = φ(x.arguments[1])\n",
@@ -167,9 +226,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{align}\n",
+       "\\frac{d}{dt} \\langle a^\\dagger  a\\rangle  =& -1.0 \\langle a^\\dagger  a\\rangle  \\kappa + 1 i N g_{1} \\langle a  {\\sigma}_{1}^{{21}}\\rangle  -1 i N g_{1} \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  \\\\\n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{1}^{{22}}\\rangle  =& R -1.0 R \\langle {\\sigma}_{1}^{{22}}\\rangle  -1 i g_{1} \\langle a  {\\sigma}_{1}^{{21}}\\rangle  + 1 i g_{1} \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  -1.0 \\langle {\\sigma}_{1}^{{22}}\\rangle  \\Gamma \\\\\n",
+       "\\frac{d}{dt} \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  =& -0.5 R \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  + 1 i g_{1} \\langle {\\sigma}_{1}^{{22}}\\rangle  -1 i g_{1} \\langle a^\\dagger  a\\rangle  -0.5 \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  \\left( \\Gamma + \\kappa + \\nu \\right) -1 i \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  \\Delta + 1 i \\left( -1 + N \\right) g_{1} \\langle {\\sigma}_{1}^{{12}}  {\\sigma}_{2}^{{21}}\\rangle  + 2 i g_{1} \\langle {\\sigma}_{1}^{{22}}\\rangle  \\langle a^\\dagger  a\\rangle  \\\\\n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{1}^{{12}}  {\\sigma}_{2}^{{21}}\\rangle  =& -1.0 R \\langle {\\sigma}_{1}^{{12}}  {\\sigma}_{2}^{{21}}\\rangle  -1 i g_{1} \\langle a  {\\sigma}_{1}^{{21}}\\rangle  + 1 i g_{1} \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle  + \\langle {\\sigma}_{1}^{{12}}  {\\sigma}_{2}^{{21}}\\rangle  \\left( -1.0 \\Gamma -1.0 \\nu \\right) + 2 i g_{1} \\langle {\\sigma}_{1}^{{22}}\\rangle  \\langle a  {\\sigma}_{1}^{{21}}\\rangle  -2 i g_{1} \\langle {\\sigma}_{1}^{{22}}\\rangle  \\langle a^\\dagger  {\\sigma}_{1}^{{12}}\\rangle \n",
+       "\\end{align}\n"
+      ],
+      "text/plain": [
+       "∂ₜ(⟨a′*a⟩) = -⟨a′*a⟩*κ + (0 + 1im)*N*g_1*⟨a*σ211⟩ + (0 - 1im)*N*g_1*⟨a′*σ121⟩\n",
+       "∂ₜ(⟨σ221⟩) = R - R*⟨σ221⟩ + (0 - 1im)*g_1*⟨a*σ211⟩ + (0 + 1im)*g_1*⟨a′*σ121⟩ - ⟨σ221⟩*Γ\n",
+       "∂ₜ(⟨a′*σ121⟩) = -0.5R*⟨a′*σ121⟩ + (0 + 1im)*g_1*⟨σ221⟩ + (0 - 1im)*g_1*⟨a′*a⟩ - 0.5⟨a′*σ121⟩*(Γ + κ + ν) + (0 - 1im)*⟨a′*σ121⟩*Δ + (0 + 1im)*(-1 + N)*g_1*⟨σ121*σ212⟩ + (0 + 2im)*g_1*⟨σ221⟩*⟨a′*a⟩\n",
+       "∂ₜ(⟨σ121*σ212⟩) = -R*⟨σ121*σ212⟩ + (0 - 1im)*g_1*⟨a*σ211⟩ + (0 + 1im)*g_1*⟨a′*σ121⟩ + ⟨σ121*σ212⟩*(-Γ - ν) + (0 + 2im)*g_1*⟨σ221⟩*⟨a*σ211⟩ + (0 - 2im)*g_1*⟨σ221⟩*⟨a′*σ121⟩\n"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eqs_sc = scale(eqs_c)"
    ]
@@ -183,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/superradiant_laser_indexed.svg\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Solve the numeric problem\n",
     "sol = solve(prob,Tsit5(),maxiters=1e7)\n",
@@ -258,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +369,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{align}\n",
+       "\\frac{d}{d\\tau} \\langle a^\\dagger  a_0\\rangle  =& -1 i \\langle a^\\dagger  a_0\\rangle  \\Delta -0.5 \\langle a^\\dagger  a_0\\rangle  \\kappa + 1 i N g_{1} \\langle {\\sigma}_{1}^{{21}}  a_0\\rangle  \\\\\n",
+       "\\frac{d}{d\\tau} \\langle {\\sigma}_{1}^{{21}}  a_0\\rangle  =& -0.5 R \\langle {\\sigma}_{1}^{{21}}  a_0\\rangle  + 1 i g_{1} \\langle a^\\dagger  a_0\\rangle  -0.5 \\langle {\\sigma}_{1}^{{21}}  a_0\\rangle  \\left( \\Gamma + \\nu \\right) -2 i g_{1} \\langle {\\sigma}_{1}^{{22}}\\rangle  \\langle a^\\dagger  a_0\\rangle \n",
+       "\\end{align}\n"
+      ],
+      "text/plain": [
+       "∂ₜ(⟨a′*a_0⟩) = (0 - 1im)*⟨a′*a_0⟩*Δ - 0.5⟨a′*a_0⟩*κ + (0 + 1im)*N*g_1*⟨σ211*a_0⟩\n",
+       "∂ₜ(⟨σ211*a_0⟩) = -0.5R*⟨σ211*a_0⟩ + (0 + 1im)*g_1*⟨a′*a_0⟩ - 0.5⟨σ211*a_0⟩*(Γ + ν) + (0 - 2im)*g_1*⟨σ221⟩*⟨a′*a_0⟩\n"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "corr_sc.de"
    ]
@@ -293,13 +403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "prob_ss = SteadyStateProblem(prob)\n",
-    "sol_ss = solve(prob_ss, DynamicSS(Tsit5(); abstol=1e-8, reltol=1e-8), \n",
-    "        reltol=1e-14, abstol=1e-14, maxiters=5e7)\n",
+    "sol_ss = solve(prob_ss, DynamicSS(Tsit5(); abstol=1e-6, reltol=1e-6), \n",
+    "        reltol=1e-12, abstol=1e-12, maxiters=1e7)\n",
     "nothing # hide"
    ]
   },
@@ -312,9 +422,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ω = [-10:0.01:10;]Γ_\n",
     "spec = S(ω,sol_ss.u,p0)\n",
@@ -324,9 +445,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/christoph/git/QuantumCumulants.jl/docs/src/examples/jupyter_notebooks/spectrum_superradiant_laser_indexed.svg\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plot(ω, spec_n, xlabel=\"ω/Γ\", legend=false, size=(500,300))\n",
     "savefig(\"spectrum_superradiant_laser_indexed.svg\") # hide"
@@ -346,15 +478,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.8.5",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.5"
+   "version": "1.10.2"
   }
  },
  "nbformat": 4,
