--- a/dev/examples/jupyter_notebooks/cavity_antiresonance_indexed.ipynb
+++ b/dev/examples/jupyter_notebooks/cavity_antiresonance_indexed.ipynb
@@ -67,9 +67,8 @@
        "Index(ℋ(cavity) ⊗ ℋ(atom), :j, N, 2)"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -159,19 +158,18 @@
       "text/latex": [
        "\\begin{align}\n",
        "\\frac{d}{dt} \\langle a\\rangle  =& -1 i \\left( \\eta + \\underset{i}{\\overset{N}{\\sum}} {g}_{i}  \\langle {\\sigma}_{i}^{{12}}\\rangle  \\right) -1 i \\langle a\\rangle  {\\Delta}c -0.5 \\langle a\\rangle  \\kappa \\\\\n",
-       "\\frac{d}{dt} \\langle {\\sigma}_{k}^{{12}}\\rangle  =& -0.5 \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} + \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   \\langle {\\sigma}_{k}^{{22}}\\rangle   {\\Gamma}_{k,j} -1 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} + 2 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   \\langle {\\sigma}_{k}^{{22}}\\rangle   {\\Omega}_{k,j} -1 i {g}_{k} \\langle a\\rangle  -0.5 \\langle {\\sigma}_{k}^{{12}}\\rangle  {\\Gamma}_{k,k} -1 i \\langle {\\sigma}_{k}^{{12}}\\rangle  {\\Delta}a + 2 i {g}_{k} \\langle a\\rangle  \\langle {\\sigma}_{k}^{{22}}\\rangle  \\\\\n",
-       "\\frac{d}{dt} \\langle {\\sigma}_{k}^{{22}}\\rangle  =& -0.5 \\left( \\underset{i{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{i}^{{21}}\\rangle   \\langle {\\sigma}_{k}^{{12}}\\rangle   {\\Gamma}_{i,k} + \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{21}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} \\right) + 1 i \\underset{i{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{i}^{{21}}\\rangle   \\langle {\\sigma}_{k}^{{12}}\\rangle   {\\Omega}_{i,k} -1 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{21}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} -1.0 \\langle {\\sigma}_{k}^{{22}}\\rangle  {\\Gamma}_{k,k} + 1 i {g}_{k} \\langle a^\\dagger\\rangle  \\langle {\\sigma}_{k}^{{12}}\\rangle  -1 i {g}_{k} \\langle {\\sigma}_{k}^{{21}}\\rangle  \\langle a\\rangle \n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{k}^{{12}}\\rangle  =& -0.5 \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} + \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{22}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} -1 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} + 2 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{22}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} -1 i {g}_{k} \\langle a\\rangle  -0.5 \\langle {\\sigma}_{k}^{{12}}\\rangle  {\\Gamma}_{k,k} -1 i \\langle {\\sigma}_{k}^{{12}}\\rangle  {\\Delta}a + 2 i {g}_{k} \\langle {\\sigma}_{k}^{{22}}\\rangle  \\langle a\\rangle  \\\\\n",
+       "\\frac{d}{dt} \\langle {\\sigma}_{k}^{{22}}\\rangle  =& -0.5 \\left( \\underset{i{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{i}^{{21}}\\rangle   \\langle {\\sigma}_{k}^{{12}}\\rangle   {\\Gamma}_{i,k} + \\underset{j{\\ne}i,k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{21}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Gamma}_{k,j} \\right) + 1 i \\underset{i{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{i}^{{21}}\\rangle   \\langle {\\sigma}_{k}^{{12}}\\rangle   {\\Omega}_{i,k} -1 i \\underset{j{\\ne}k}{\\overset{N}{\\sum}} \\langle {\\sigma}_{k}^{{21}}\\rangle   \\langle {\\sigma}_{j}^{{12}}\\rangle   {\\Omega}_{k,j} -1.0 \\langle {\\sigma}_{k}^{{22}}\\rangle  {\\Gamma}_{k,k} -1 i {g}_{k} \\langle {\\sigma}_{k}^{{21}}\\rangle  \\langle a\\rangle  + 1 i {g}_{k} \\langle a^\\dagger\\rangle  \\langle {\\sigma}_{k}^{{12}}\\rangle \n",
        "\\end{align}\n"
       ],
       "text/plain": [
        "∂ₜ(⟨a⟩) = (0 - 1im)*(η + var\"∑(i=1:N)gi*⟨σ12i⟩\") + (0 - 1im)*⟨a⟩*Δc - 0.5⟨a⟩*κ\n",
-       "∂ₜ(⟨σ12k⟩) = -0.5var\"∑(j=1:N)(j≠i,k)⟨σ12j⟩*Γkj\" + var\"∑(j=1:N)(j≠i,k)⟨σ12j⟩*⟨σ22k⟩*Γkj\" + (0 - 1im)*var\"∑(j=1:N)(j≠k)⟨σ12j⟩*Ωkj\" + (0 + 2im)*var\"∑(j=1:N)(j≠k)⟨σ12j⟩*⟨σ22k⟩*Ωkj\" + (0 - 1im)*gk*⟨a⟩ - 0.5⟨σ12k⟩*Γkk + (0 - 1im)*⟨σ12k⟩*Δa + (0 + 2im)*gk*⟨a⟩*⟨σ22k⟩\n",
-       "∂ₜ(⟨σ22k⟩) = -0.5(var\"∑(i=1:N)(i≠k)⟨σ21i⟩*⟨σ12k⟩*Γik\" + var\"∑(j=1:N)(j≠i,k)⟨σ21k⟩*⟨σ12j⟩*Γkj\") + (0 + 1im)*var\"∑(i=1:N)(i≠k)⟨σ21i⟩*⟨σ12k⟩*Ωik\" + (0 - 1im)*var\"∑(j=1:N)(j≠k)⟨σ21k⟩*⟨σ12j⟩*Ωkj\" - ⟨σ22k⟩*Γkk + (0 + 1im)*gk*⟨a′⟩*⟨σ12k⟩ + (0 - 1im)*gk*⟨σ21k⟩*⟨a⟩\n"
+       "∂ₜ(⟨σ12k⟩) = -0.5var\"∑(j=1:N)(j≠i,k)⟨σ12j⟩*Γkj\" + var\"∑(j=1:N)(j≠i,k)⟨σ22k⟩*⟨σ12j⟩*Γkj\" + (0 - 1im)*var\"∑(j=1:N)(j≠k)⟨σ12j⟩*Ωkj\" + (0 + 2im)*var\"∑(j=1:N)(j≠k)⟨σ22k⟩*⟨σ12j⟩*Ωkj\" + (0 - 1im)*gk*⟨a⟩ - 0.5⟨σ12k⟩*Γkk + (0 - 1im)*⟨σ12k⟩*Δa + (0 + 2im)*gk*⟨σ22k⟩*⟨a⟩\n",
+       "∂ₜ(⟨σ22k⟩) = -0.5(var\"∑(i=1:N)(i≠k)⟨σ21i⟩*⟨σ12k⟩*Γik\" + var\"∑(j=1:N)(j≠i,k)⟨σ21k⟩*⟨σ12j⟩*Γkj\") + (0 + 1im)*var\"∑(i=1:N)(i≠k)⟨σ21i⟩*⟨σ12k⟩*Ωik\" + (0 - 1im)*var\"∑(j=1:N)(j≠k)⟨σ21k⟩*⟨σ12j⟩*Ωkj\" - ⟨σ22k⟩*Γkk + (0 - 1im)*gk*⟨σ21k⟩*⟨a⟩ + (0 + 1im)*gk*⟨a′⟩*⟨σ12k⟩\n"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
