--- a/dev/examples/jupyter_notebooks/waveguide.ipynb
+++ b/dev/examples/jupyter_notebooks/waveguide.ipynb
@@ -5,7 +5,7 @@
    "id": "8fbb2e1c",
    "metadata": {},
    "source": [
-    "# Waveguide Superradiant Energy Transfer"
+    "# Waveguide Energy Transfer"
    ]
   },
   {
@@ -275,15 +275,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.1",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.1"
+   "version": "1.10.2"
   }
  },
  "nbformat": 4,
